[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmd-property-tools"
version = "0.1.0"
description = "Uni-Mol-tools-like property training and prediction helpers for DeePMD-kit."
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
authors = [
  {name = "DeepModeling"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "deepmd-kit[torch]==3.1.3",
  "dpdata",
  "numpy",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
deepmd-property-tools = "deepmd_property_tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepmd_property_tools*"]

[tool.setuptools.package-data]
"deepmd_property_tools.config" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
